src/app/assets/layout.css
html,body{
  height: 100%;
}

body{font-size: 16px}

a[ng-click]{
  cursor: pointer;
}

.vertical-text{
  transform: rotate(-90deg);
  transform-origin: left top 0;
  float: left;
}

#wrapper{
  position: absolute;
  min-height: 100%;
  width: 100%;
  padding-top: 52px;
}

/* Main menu */
#main-menu{
  background: #232f3e;
  position:fixed;
  top:0;
  font-size: 0.75em;
  border-bottom: 1px solid #131f2e;
  z-index: 9999;
}

#main-menu nav ul{
  display: inline-block;
}

#main-menu a{
  color: #b3bfce;
  padding: 1.5em 1em;
}

#main-menu a:hover{
  color: #fff;
  background-color: inherit;
}

#main-menu ul li.active a{
  background-color: #131f2e;
}

#main-menu .pure-menu-heading{
  font-weight: bold;
  color: white;
  font-size: 1.4em;
  padding: 0 2em;
}

/*
h1{
  font-family: "Raleway", "Helvetica Neue", Helvetica, Arial, sans-serif;
}
*/

.content-wrapper{

}
.content{
  max-width: 1000px;
  padding: 1.5em 1em;
  margin: 0 auto;
  text-align: justify;
}

.content h1{
  text-transform: uppercase;
  text-align: center;
  font-size: 2em;
}

footer{
  position:absolute;
  bottom: 0;
  background-color: #232f3e;
  color: #999;
  text-align: center;
  padding: 1.5em;
}

.right{
  float: right;
}

.img-responsive{
  max-width: 100%;
  height: auto;
}

